redux_implementation_in_progress

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 
 #navbar {
-    border: 2px solid red;
+    border: 2px solid rgba(167, 167, 167, 0.176);
     padding: 0px 30px;
     background-color: white;
 }
